--- a/main.css
+++ b/main.css
@@ -25,7 +25,14 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   width: 90%;
-  gap: 2em;
+  gap: 1em;
+  margin: auto;
+}
+/* Why does this need to be placed here, refuses to work placed earlier in code */
+@media screen and (max-width: 900px) {
+  .portfolio-grid {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .grid-media {
@@ -34,14 +41,67 @@ body {
   width: 100%;
   margin: auto;
   object-fit: fill;
+  cursor: pointer;
 }
-
 .grid-media:hover {
   border: 5px solid purple;
   width: 80%;
   height: 80%;
   transition: 1s ease;
   background: #fff;
+}
+
+.grid-information {
+  width: 90%;
+  margin: auto;
+  margin-top: 5em;
+  display: grid;
+  /* grid-template-areas:
+    "img img img img title title title title title "
+    "img img img img text text text text text "
+    "img img img img text text text text text "
+    "alt alt alt text text text text text text "
+    ". . . text text text text text text "
+    ". . . text text text text text text "
+    ". . . text text text text text text "
+    ". . . text text text text text text "
+    ". . . text text text text text text "
+   ; */
+   grid-template-areas: 
+   "img img title"
+   "img img sub"
+   "text text text"
+   "text text text"
+   ;
+}
+
+.grid-img {
+  grid-area: img;
+  width: 100%;
+  object-fit: contain;
+
+}
+
+.grid-title {
+  grid-area: title;
+  margin-top: auto;
+  margin-left: .5em;
+  text-align: left;  
+  font-size: 4cap;
+}
+
+.grid-sub{
+grid-area: sub;
+font-size: 14pt;
+color: darkgray;
+font-weight: 300;
+text-align: left;
+margin-left: 1em;
+margin-top: 0px;
+}
+.grid-text {
+  grid-area: text;
+  margin-left: 0px;
 }
 
 /* Header */
@@ -172,8 +232,7 @@ div.inner {
   margin: auto;
   width: 700px;
   max-width: 90%;
-  margin-bottom: 25px;
-  padding-top: 3em;
+  margin-bottom: 5em;
 }
 
 /* Links */
