--- a/main.css
+++ b/main.css
@@ -1,135 +1,64 @@
 body {
-  /* Here i link a image hosted somewhere on the web which i assume has drawbacks, for example it could be removed at any time */
-  background: url(https://media1.giphy.com/media/WJmngXIazXPzV5NcMH/200w.gif?cid=6c09b9520arxg5xk78m20q2jtz7jcxepi4i1pghar1xuwmed&ep=v1_gifs_search&rid=200w.gif&ct=g);
+  /* background-color: rgb(70, 69, 20); */
+  background-image: linear-gradient(0.88turn,hsl(200, 35%, 25%),hsl(90, 14%, 3%));
+  /* background-image: linear-gradient(hsl(251, 100%, 10%),hsl(0, 0%, 0%)); */
   background-attachment: fixed;
-  margin:auto;
-}
-
-
-.form_container {
-display: flex;
-flex-direction: column;
-max-width: 70%;
-margin: auto;
-border-right: 25px solid #ffffff00;
-}
-
-
-input.form,textarea.form {
-  width: 100%;
-  padding: 11px 11px;
-  border-radius: 19px;
-  background-color: aliceblue;
-  margin-bottom: 11px;
-  font-family: sans-serif;
-  border: solid 2px yellowgreen;
-  resize: vertical;
+  margin: .3rem .8rem 9rem .3rem;
+  /* overflow-y: scroll; */
+  /* scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-scrollbar: */
   
 }
-textarea:focus-within, input:focus-within {
-  Border: solid 2px Purple;
-  outline: none;
-  color:#000;
+
+section.page {
+  height: 100rem;
 }
-button{
-  border-radius: 19px;
-  padding: 3px 11px;
-  color: #fff;
-  background-color: lightgray;
-  border-width: 1px;
-  font-family: sans-serif;
+.page {
   display: flex;
-  margin: auto;
-  margin-bottom: 11px;
-  border: solid 1px whitesmoke
+  width:100%;
+  /* background-image: linear-gradient(rgb(255, 255, 255),rgb(255, 252, 245)); */
+  background-color: #fff;
+  margin:auto;
+  margin-bottom: .3rem;
+  box-shadow: .2rem .2rem 3rem #ffffff0c;
+
 }
 
-button:enabled{
-  background-image: linear-gradient(#9acd32, rgb(125, 187, 0));
+.rounded {
+  border-radius: 1rem;
+  border: 3pt rgb(236, 236, 236) solid;
 }
-
-button:hover:enabled{
-  background-image: none;
-  background-color: purple;
-  color: #fff;
-  cursor: pointer;
-}
-
-.tos {
-  margin: auto;
-}
-
 
 header {
-  background-image: linear-gradient(rgb(19, 44, 104), purple);
-  padding: 10px;
-  margin: 10px auto;
-  /* Used a example on here to figuire out distributign elements with flex */
-  justify-content: space-between;
-  display: flex;
-  color: yellowgreen;
-
-  border: 10px solid purple;
-}
-
-.container {
-  background: white;
-  border: 10px solid purple;
-  padding: 0px 40px px 40px;
-  margin: auto;
   display: flex;
   flex-direction: column;
-  flex-grow:1;
-  flex-shrink:2;
-  flex-basis: auto;
-}
-.container p, .container h3 {
-  text-align: left;
-  margin: 10pt 20pt 10pt 20pt
-}
-.container p {
-  color: blue;
+  align-items: flex-end;
 }
 
-h1,h2 {
-  font-family: "Teko", sans-serif;
+nav {
+  display: flex;
+  height: 5rem;
+  flex-direction: row; 
+  /* background: red; */
+  border-radius: 0rem 1rem 1rem 0rem;
+  margin-right: 10vw;
+}
+
+input {
+  height: 100%;
+  border: 0px #fff solid;
+  border-left: 3pt  rgb(243, 243, 243)  solid;
+  background:none;
+  font-size: 1.6rem;
+  color:rgb(94, 108, 110);
   text-align: center;
+  padding: 0rem 1rem 0rem 1rem;
+  font-family: 'Inter', sans-serif;
+  font-weight: 5000;
+  /* background-color: red; */
 }
 
-a {
-  text-align: center;
-  color: yellowgreen;
-}
-a:hover {
-  color: yellow;
-  font-weight: 900;
-}
-
-img {
-  object-fit: scale-down;
-  padding-top: 1vh;
-  padding-bottom: 1vh;
-}
-
-img.image-contain {
-  /* float:right; */
-  object-fit: contain;
-  height: 200px;
-  padding-left: 15px;
-  margin-right: 20pt;
-  /* padding-top: -10px; */
-}
-
-.portfolio {
-  height: 250px;
-}
-
-.article {
-  max-width: fit-content;
-  width: 300px;
-}
-
-p.footer {
-  text-align: center;
-  color: yellowgreen;
+input:last-child {
+    border-right: 3pt  rgb(243, 243, 243)  solid;
 }
